@@ -38,15 +38,14 @@ typedef struct struct_dialog_information {
  */
 typedef struct talk_info {
     struct object *who;                 /**< Player saying something. */
-    const char *text;                       /**< What the player actually said. */
+    const char *text;                   /**< What the player actually said. */
     sstring message;                    /**< If not NULL, what the player will be displayed as said. */
     int message_type;                   /**< A reply_type value for message. */
     int replies_count;                  /**< How many items in replies_words and replies. */
     sstring replies_words[MAX_REPLIES]; /**< Available reply words. */
     sstring replies[MAX_REPLIES];       /**< Description for replies_words. */
-    int npc_count;                      /**< How many NPCs reacted to the text being said. */
-    struct object *npc[MAX_NPC];        /**< The NPCs reacting. */
-    sstring npc_msgs[MAX_NPC];          /**< What the NPCs in npc will say. */
+    int npc_msg_count;                  /**< How many NPCs reacted to the text being said. */
+    sstring npc_msgs[MAX_NPC];          /**< What the NPCs will say. */
 } talk_info;
 
 
